dark mode toggle fixed

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ html {
 .btn-dark--mode {
   height: 2.2rem;
   width: 2.2rem;
-  color: var(--white);
+  color: var(--challenge-content-bg);
 }
 
 /* -------------------------------------------------------------------------------------------------------------------------------------
